# lua-android

./: README.md  build.gradle  consumer-rules.pro
src/androidTest/java/com/nmmedit/lua/: ExampleInstrumentedTest.java  NativeLib.java  NativeLibTest.java
src/androidTest/java/mao/commons/jlua/: LuaCallbackContextTest.java  LuaJavaCallbackContextTest.java  LuaStateTest.java  TT.java
src/androidTest/java/mao/commons/jlua/luajava/: LuaJavaLibTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  fast_lua_jni.c  ffi_func_jni.c  jni_init.c  link.map  lua.cpp  luaL_jni.c  lua_android.c  lua_callback_jni.c  lua_jni.c  lua_jni.h  lua_test.c  native_functions.c  pthread_jni.c  utils.c  utils.h
src/main/cpp/lua/: CMakeLists.txt  android_log.c  android_log.h
src/main/cpp/lua/src/: lauxlib.h  lua.h
src/main/cpp/mylibffi/: CMakeLists.txt
src/main/java/com/nmmedit/lua/: NativeLib.java
src/main/java/mao/commons/jlua/: CJFunction.java  FastLuaJNI.java  FunctionCallbackContext.java  FunctionUtils.java  JFunction.java  LuaAndroid.java  LuaCallbackContext.java  LuaException.java  LuaJNI.java  LuaJavaCallbackContext.java  LuaState.java  ResourceFinder.java  UtilFunctions.java
src/main/java/mao/commons/jlua/luajava/: LuaJavaLib.java  MyInvocationHandler.java  ReflectionObject.java  ReflectionUtils.java
src/main/java/mao/commons/jlua/values/: LuaTable.java
src/test/java/com/nmmedit/lua/: ExampleUnitTest.java
src/test/java/mao/commons/jlua/: NativeRegisterCodeGeneratorTest.java
